--- a/online-store-example/src/main/resources/application.properties
+++ b/online-store-example/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/online_store
+spring.datasource.username=jeet
+spring.datasource.password=1234
 
+spring.flyway.url=jdbc:postgresql://localhost:5432/online_store
+spring.flyway.user=jeet
+spring.flyway.password=1234
