--- a/online-store-example/pom.xml
+++ b/online-store-example/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>7.11.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
